Função de redirecionar cada filme para sua página de detalhes implementada

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" href="./assets/icone_logo_aba.png"/>
+    <link rel="icon" href="/icone_logo_aba.png"/>
     <title>AvantiFlix</title>
   </head>
   <body>
